--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -17,6 +17,8 @@
 \usetikzlibrary{arrows}
 \usepackage{pgf,tikz}
 \usepackage{hyperref}
+\usepackage[justification=centering]{caption}
+\usepackage{adjustbox}   
 
 \theoremstyle{plain}
 \newtheorem{proposition}{Proposition}
