--- a/chapitre1.tex
+++ b/chapitre1.tex
@@ -76,6 +76,13 @@ Nous utiliserons cette dernière solution dans la suite du document. Finalement 
 C'est à partir de l'hypothèse que le comportement intelligent humain est le résultat de la structure et des éléments de bases du système nerveux central (que sont les neurones), que l’on a développé les réseaux de neurones artificiels. A la suite des observations biologiques, les scientifiques ont schématisé un neurone en trois parties : les dendrites qui constituent les entrées de l’information créée par un stimulus, un corps où l’information est traitée, et l’axone qui représente la voie de sortie de l’information vers d’autres unités neuronales. Les synapses permettent le contact entre 2 neurones, chacun d'entre eux intègrant en permanence jusqu'à un millier de signaux synaptiques. Ces signaux n'opèrent pas de manière linéaire : il y a un effet de seuil. 
 Les réseaux de neurones artificiels ont été développés à partir de cette vision et leur but est de modéliser le mécanisme d'apprentissage et de traitement de l'information qui se produit dans le cerveau humain.
 
+\begin{figure}[!h]
+\begin{center}
+	{\includegraphics[scale=0.4]{images/chapter1/neurone_bio.png}\label{neurone}}
+  \caption{Conception d'un neurone artificiel à partir d'un neurone biologique \\ Source : https://sites.google.com/site/tpeia9/home}
+\end{center}
+\end{figure}
+
 \section{Un neurone}
 
 \begin{definition}[Neurone]
