--- a/chapitre7.tex
+++ b/chapitre7.tex
@@ -54,7 +54,7 @@ On entraine le réseau par batchs de 50 séquences de 50 caractères.
 
 \begin{figure}[H]
 \centering
-\resizebox{1\linewidth}{!}{\includegraphics{images/chapter7/RMSProp_vs_SGD.png}}
+\resizebox{\linewidth}{!}{\includegraphics{images/chapter7/RMSProp_vs_SGD.png}}
 \caption{Courbe du coût lors de l'entrainement selon l'algorithme d'optimisation utilisé}
 \label{RMSProp_vs_SGD}
 \end{figure}
