--- a/compte-rendu.tex
+++ b/compte-rendu.tex
@@ -44,6 +44,10 @@
 
 \tableofcontents
 
+\addcontentsline{toc}{chapter}{Introduction}
+
+\include{introduction}
+
 \include{chapitre1}
 
 \chapter{Une première implémentation}
@@ -324,6 +328,10 @@ Nous pouvons alors distinguer trois cas reflétant les principaux comportements 
 \include{chapitre7}
 \include{chapitre8}
 \include{chapitre9}
+
+\addcontentsline{toc}{chapter}{Conclusion}
+
+\include{conclusion}
 
 \nocite{*}
 
